# data-structure-and-algorithm

./: CMakeLists.txt  README.md  basics.c  magnet.cpp  oops.c
Mini Project in C Snake Game/: snake game.c
advance/: oops.c  task_alx.c
dsa-basics/: I_love_C  README.md  add  argcv.c  basics.c  basics1.c  basics2.c  basics3.c  hello_world.c  main.c  new_add  pointer2.c  pointers1.c  very_basics.c
dsa-basics2/: README.md  functions_.c  recursion.c  structs1.c  test.c  testing_malloc.c  testing_malloc2.c
dsa-basics2/func_pointers/: design.c  first.c  functions_pointers.c
dsa-basics2/func_pointers/printf/: main.h  task1.c
mylib/: .motivation.h.swp
