cmake_minimum_required(VERSION 3.24)
project(ClionProject)

set(CMAKE_CXX_STANDARD 17)

add_executable(ClionProject dsa-basics2/functions_.c dsa-basics/main.c dsa-basics/basics1.c dsa-basics/basics2.c dsa-basics/basics3.c dsa-basics/very_basics.c dsa-basics/pointers1.c dsa-basics/pointer2.c dsa-basics/hello_world.c dsa-basics2/structs1.c dsa-basics2/recursion.c)
